# lazypueue

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
.pueue/: pueue.yml
src/: app.rs  events.rs  lib.rs  main.rs  pueue_client.rs
src/ui/: details.rs  input.rs  mod.rs  status_bar.rs  task_list.rs
tests/: tui_test.rs
