[package]
name = "lazypueue"
version = "0.1.0"
edition = "2021"
authors = ["Diego"]
description = "A lazygit-style terminal UI for pueue task management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/diego/lazypueue"
keywords = ["tui", "pueue", "task-manager", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Pueue client
pueue-lib = "0.27"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/Time
chrono = "0.4"

[dev-dependencies]
# Testing utilities
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
